arm64: dts: lge: import/revert joan dts
For whatever reason (compilation problems?), LGE
changed up the dts for joan in their following
phoenix_sprout kernel drops. We want to use the
joan DTS from their release, so revert it.

Change-Id: Ifbffccd400a675c68141926bb6f5c1a1703b4745
Signed-off-by: Han Sol Jin <hansol@hansol.ca>

--- a/arch/arm64/boot/dts/lge/msm8998-joan/msm8998-joan-common/msm8998-joan-common-usb.dtsi
+++ b/arch/arm64/boot/dts/lge/msm8998-joan/msm8998-joan-common/msm8998-joan-common-usb.dtsi
@@ -22,7 +22,7 @@
 	/* Sequence of parameters :
 	   - IMP_CTRL1, TUNE1, TUNE2, TUNE4  */
 	qcom,qusb-phy-tune = <0x8c 0xff 0x0c 0x04>;
-	qcom,qusb-phy-tune-host = <0x8c 0x05 0x0c 0x05>;
+	qcom,qusb-phy-tune-host = <0x8c 0xa5 0x0f 0x05>;
 };
 
 &ssphy {
