--- a/arch/arm64/boot/dts/lge/msm8998-joan/msm8998-joan_kr/msm8998-joan_kr.dtsi
+++ b/arch/arm64/boot/dts/lge/msm8998-joan/msm8998-joan_kr/msm8998-joan_kr.dtsi
@@ -24,6 +24,7 @@
 #include "msm8998-joan_kr-touch.dtsi"
 #include "msm8998-joan_kr-tdmb.dtsi"
 #include "msm8998-joan_kr-usb.dtsi"
+#include "msm8998-joan_kr-mme.dtsi"
 
 / {
 	reserved-memory {
@@ -194,4 +195,8 @@
 
 &wil6210 {
 	status = "disabled";
+};
+
+&qseecom_mem {
+       size = <0 0x1800000>;
 };
