--- a/arch/arm64/boot/dts/lge/msm8998-joan/msm8998-joan_kr/msm8998-joan_kr-mme.dtsi
+++ b/arch/arm64/boot/dts/lge/msm8998-joan/msm8998-joan_kr/msm8998-joan_kr-mme.dtsi
@@ -10,19 +10,9 @@
  * GNU General Public License for more details.
  */
 
-#include "../../msm8998-joan/msm8998-joan-common/msm8998-joan-common-pm.dtsi"
-
-&pmi8998_haptics {
-	status = "okay";
-};
-
-&i2c_1 { /* BLSP1 QUP1 */
-	idtp9223-charger@61 {               /* Slave driver and slave Address */
-		idt,fod-register = <0x78>;
-		idt,fod-value = <0xA7>;
+&soc {
+	lge-mme {
+		compatible = "lge-mme";
+		lge-mme,gpio_sleep_n = <&tlmm 81 0>;
 	};
 };
-
-&soc {
-};
-
