--- a/arch/arm64/configs/lineageos_joan_defconfig
+++ b/arch/arm64/configs/lineageos_joan_defconfig
@@ -486,6 +486,9 @@ CONFIG_SND_SOC_MSM8998=y
 CONFIG_SND_LGE_DSDP_DUAL_AUDIO=y
 CONFIG_SND_USE_QUAT_MI2S=y
 CONFIG_SND_LGE_TX_NXP_LIB=y
+CONFIG_SND_LGE_EFFECT=n
+CONFIG_SND_LGE_NORMALIZER=n
+CONFIG_SND_LGE_MQA=y
 CONFIG_SND_FM_RX_MI2S=y
 CONFIG_SND_SOC_LGE_ESS_DIGITAL_FILTER=y
 CONFIG_SND_SOC_ES9218P=y
