--- a/arch/arm/boot/dts/qcom/msm8998.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8998.dtsi
@@ -285,11 +285,12 @@
 	firmware: firmware {
 		android {
 			compatible = "android,firmware";
+#ifdef CONFIG_MACH_MSM8998_PHOENIX
 			vbmeta {
 				compatible = "android,vbmeta";
 				parts = "vbmeta,boot,system,vendor,dtbo,product";
 			};
-
+#endif
 			fstab {
 				compatible = "android,fstab";
 				vendor {
@@ -298,6 +299,7 @@
 					type = "ext4";
 					mnt_flags = "ro,barrier=1,discard";
 					fsmgr_flags = "wait,slotselect,avb";
+#ifdef CONFIG_MACH_MSM8998_PHOENIX
 					status = "ok";
 				};
 				product {
@@ -308,6 +310,18 @@
 					fsmgr_flags = "wait,slotselect,avb";
 					status = "ok";
 				};
+#else /* all other devices use system-as-root */
+					status = "disabled";
+				};
+                system {
+                    compatible = "android,system";
+                    dev = "/dev/block/platform/soc/1da4000.ufshc/by-name/system";
+                    type = "ext4";
+                    mnt_flags = "ro,barrier=1";
+                    fsmgr_flags = "wait,verify";
+                    status = "ok";
+                };
+#endif /* CONFIG_MACH_MSM8998_PHOENIX */
 			};
 		};
 	};
